--- a/event.html
+++ b/event.html
@@ -79,13 +79,17 @@
         <div class="user">
             <span class="ticket_no">Ticket No:1234</span>
             <p class="title">Event:College frashers party</p>
-            <img src="c:\Users\admin\Pictures\people.png" class="img" alt="student"/>
+            <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
+            <p> </p>
+            venue:7 to 10pm
 
         </div>
         <div class="event">
             <span class="ticket_no">Ticket No:5678</span>
             <p class="title">Event:Collage Frashers Party</p>
-            <img src="c:\Users\admin\Pictures\people.png" class="img" alt="student"/>
+            <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
+            <p> </p>
+            venue:7 to 10pm
         </div>
         </div>
  
