--- a/event.html
+++ b/event.html
@@ -45,6 +45,12 @@
             height:150px;
 
         }
+        .frashers{
+            margin:10px;
+            padding:5px;
+
+        }
+
         /*mobile*/
         @media(max-width:6oopx){
             .ticket_container{
@@ -80,16 +86,17 @@
             <span class="ticket_no">Ticket No:1234</span>
             <p class="title">Event:College frashers party</p>
             <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
-            <p> </p>
-            venue:7 to 10pm
+            <p class="frashers">A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games, competitions, cultural programs, and more. </p>
+           <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> vanue:7 to 10pm
 
         </div>
-        <div class="event">
+        <div class="event">           
+
             <span class="ticket_no">Ticket No:5678</span>
             <p class="title">Event:Collage Frashers Party</p>
             <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
-            <p> </p>
-            venue:7 to 10pm
+            <p class="frashers"> A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games,competitions, cultural programs, and moreHere are some things to know about fresher's  Here are some things to know about fresher'</p>
+            <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> vanue:7 to 10pm
         </div>
         </div>
  
