--- a/event.html
+++ b/event.html
@@ -15,6 +15,7 @@
             display:flex;
             font-family:sans-serif;
         }
+        
         .user{
             background-color: rgb(231, 191, 118);
             width:40%;
@@ -87,7 +88,7 @@
             <p class="title">Event:College frashers party</p>
             <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
             <p class="frashers">A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games, competitions, cultural programs, and more. </p>
-           <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> vanue:7 to 10pm
+           <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> venue:7 to 10pm
 
         </div>
         <div class="event">           
@@ -96,7 +97,7 @@
             <p class="title">Event:Collage Frashers Party</p>
             <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
             <p class="frashers"> A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games,competitions, cultural programs, and moreHere are some things to know about fresher's  Here are some things to know about fresher'</p>
-            <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> vanue:7 to 10pm
+            <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> venue:7 to 10pm
         </div>
         </div>
  
