--- a/event.html
+++ b/event.html
@@ -86,18 +86,18 @@
         <div class="user">
             <span class="ticket_no">Ticket No:1234</span>
             <p class="title">Event:College frashers party</p>
-            <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
+            <img src="./img/collagelo.jpeg" class="img" alt="student"/>
             <p class="frashers">A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games, competitions, cultural programs, and more. </p>
-           <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> venue:7 to 10pm
+           <img src="./img/party.png" class="" alt="student"/> venue:7 to 10pm
 
         </div>
         <div class="event">           
 
             <span class="ticket_no">Ticket No:5678</span>
             <p class="title">Event:Collage Frashers Party</p>
-            <img src="c:\Users\admin\Pictures\collagelo.jpeg" class="img" alt="student"/>
+            <img src="./img/collagelo.jpeg" class="img" alt="student"/>
             <p class="frashers"> A fresher's party is a college event that welcomes new students and helps them feel at home. The party can include games,competitions, cultural programs, and moreHere are some things to know about fresher's  Here are some things to know about fresher'</p>
-            <img src="c:\Users\admin\Downloads\party.png" class="" alt="student"/> venue:7 to 10pm
+            <img src="./img/party.png" class="" alt="student"/> venue:7 to 10pm
         </div>
         </div>
  
