--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
         }
 
         /*mobile*/
-        @media(max-width:6oopx){
+        @media(max-width:600px){
             .ticket_container{
                 flex-diraction:column;
                 align-item:center;
                 height:auto;
                 width:auto;
+                
 
             }
             .user{
@@ -70,14 +71,18 @@
                 width:300px;
                 border-left: solid;
                 border-top: dashed;
+                background-color:tomato;
             }
         }
         /*tablet*/
-        @media(min-width:601px)and(max-width:800px){
-            .event{
-                background-color: blue;
-            }
+        @media(max-width:900px)and(min-width:900px){
+            .ticket_container{
+            width:500px;
+            height:400px;
+            margin:50px auto;
+            box-shadow: gray;
         }
+    }
 
     </style>
 </head>
